# esp-s3-xiao-ov2640-camera

./: .env.example  .gitignore  Caddyfile  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: frame_log.rs  lib.rs  psram_log.rs
src/camera/: mod.rs  ov2640_tables.rs
ui/: index.html
